<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_cb2_gui</name>
  <version>0.1.0</version>
  <description>BIGSS RoboticSystem GUI</description>
  <maintainer email="liushuya7@gmail.com">Joshua Liu</maintainer>
  <license>cisst</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cisst</depend>
  <depend>cisstNetlib</depend>
  <depend>sawConstraintControllerAll</depend>
  <depend>bigss_constraint_controller</depend>
  <depend>bigss_robotic_system</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
