<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_gazebo_sim</name>
  <version>1.0.0</version>
  <description>UR robot with Gazebo simulation</description>
  <maintainer email="liushuya7@gmail.com">Joshua Liu</maintainer>
  <license>Apache Lecense 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_cb2_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
