<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_web_gui</name>
  <version>0.0.0</version>
  <description>Web-based GUI for Universal Robot</description>
  <maintainer email="jsliu@jhu.edu">Joshua Liu</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>python-nicegui</depend>

  <depend>python3-pykdl</depend>
  <depend>kdl_parser_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
